--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -8,9 +8,12 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "start": "node build/index.js"
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.53",
+    "@sveltejs/adapter-static": "^1.0.0-next.20",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -30,6 +33,7 @@
     "carbon-components": "^10.45.0",
     "carbon-components-svelte": "^0.44.5",
     "postcss": "^8.3.9",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "svelte-meta": "^1.0.2"
   }
 }
